# atlas

./: .gitignore  AGENTS.md  DESIGN.md  README.md  config.example.yaml  pyproject.toml
.claude/commands/: atlas.md
dashboard/: index.html
pipeline/: db.py  models.py  utils.py
scrapers/: aggregate.py  free_apis.py  jobspy_source.py  linkedin_guest.py
scripts/: db_write.py  fetch.py  render_cv.py  render_letter.py  serve.py
